concord_examples/tests/ui/auth_endpoint_unknown.stderr
error: unknown auth endpoint `auth::LoginMissing` in credential source
 --> tests/ui/auth_endpoint_unknown.rs:8:42
  |
8 |             credential session: Endpoint(auth::LoginMissing) // ERROR: unknown endpoint reference
  |                                          ^^^^
